# Blockchain3

./: CMakeLists.txt  README.md  main.cpp
Block/: Block.cpp  Block.h
BlockChain/: BlockChain.cpp  BlockChain.h
Blockas/: Block.h
Hash/: hashFunction.cpp  hashFunction.h  helperHashFunctions.h
Transaction/: Transaction.cpp  Transaction.h
User/: User.cpp  User.h
hashFunction/: helperHashFunctions.cpp
helperFunctions/: helperFunctions.cpp  helperFunctions.h
merkle/: merkleHash.cpp  merkleHash.h
